Added more index lines

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,8 @@ triplefox.com
                 // Draw legend markers
                 p.stroke(0, 255/2);
                 p.line(0, p.height/2, p.width, p.height/2);
+                p.stroke(0, 25);
+                p.line(0, p.height/4, p.width, p.height/4);
             });
         p.exit();
     }
