Fixed bug where to date wasn't being read properly.

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@ Weather Thing
     }
 
     if (urlVars["to"]) {
-        to = new Date(urlVars["to"]);
+        to = new Date(urlVars["to"]*1000);
         chart.dataTo = new Date(to);
     }
     else {
